# cmake-init-clang-on-windows

./: CMakeLists.txt  CMakePresets.json  README.md
.github/toolchain/: clang-toolchain.cmake
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp
test/: CMakeLists.txt
test/source/: clang-on-windows_test.cpp
